alpm-types/src/version/snapshots/buildtool::invalid_buildtool_version@case_1_full_version_with_architecture.snap
---
source: alpm-types/src/version/buildtool.rs
---
Parser failed with the following error:
1.0.0-any
     ^
invalid buildtool version
expected a stand-alone minimal alpm-package-version, or a full alpm-package-version together with a alpm-architecture, delimited by a '-'
